--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["applepay.js"]
+      "js": ["borderify.js"]
     }
   ]
 
