changed to cloneInto, works now

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
   "description": "Adds a fake Apple Pay API to Firefox to trick websites into displaying an Apple Pay button if it's available.",
 
   "icons": {
-    "48": "icons/border-48.png"
+    "48": "icons/firefox-apple-pay-48.png",
+    "96": "icons/firefox-apple-pay-96.png"
   },
 
   "content_scripts": [
