Trying to use background script instead to get notifications working

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,10 @@
     "192": "icons/apple-wallet-192.png"
   },
 
+  "background": {
+    "scripts": ["notify.js"]
+  },
+
   "content_scripts": [
     {
       "matches": ["*://*/*"],
