changing to a content + background script method

--- a/manifest.json
+++ b/manifest.json
@@ -13,13 +13,13 @@
   },
 
   "background": {
-    "scripts": ["notify.js"]
+    "scripts": ["alertApplePay.js"]
   },
 
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["applepay.js"]
+      "js": ["insertApplePay.js"]
     }
   ],
 
