Removed tabs permission

--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,6 @@
     }
   ],
 
-"permissions": ["notifications", "clipboardWrite", "tabs"]
+"permissions": ["notifications", "clipboardWrite"]
 
 }
